--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -35,7 +35,7 @@
                 <img src="/<%= product.images[0] %>" alt="<%= product.name %>">
                 <div class="product-card-body">
                     <h4 class="product-card-title"><%= product.name %></h4>
-                    <p class="product-card-price">$<%= product.price.toFixed(2) %></p>
+                    <p class="product-card-price">₹<%= product.price.toFixed(2) %></p>
                     <button class="product-card-btn">View Details</button>
                 </div>
             </a>
