--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -89,8 +89,12 @@
 
        
 
-        <div class="mt-3">
+        <div class="mt-3 d-flex justify-content-between">
           <button id="addToCart" data-product-id="<%= product._id %>" class="btn btn-primary btn-lg w-100">Add to Cart</button>
+          <a class="btn btn-outline-dark me-2" onclick="addToWishlist('<%= product._id %>')">
+            <i class="fas fa-heart"></i>
+        </a>
+          
         </div>
         <div class="coupon-section mt-4">
           <h4>Have a Coupon?</h4>
@@ -541,6 +545,41 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </script>
 
+<script>
+//add to wishlist button
+async function addToWishlist(productId){
+   console.log(productId,"productId")
+   try {
+    const response = await fetch("/users/addToWishlist",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({productId})
+    })
+    console.log(response,"response");
+    const data = await response.json()
+    console.log(data)
+    if(response.ok)
+    {Swal.fire({
+      icon:"success",
+      title:"success",
+      text:data.message
+    })}else{
+      Swal.fire({
+        icon:"error",
+        title:"error",
+        text:data.message
+      })
+    }
 
+   } catch (error) {
+    console.log(error,"something is wrong")
+    swal.fire({
+      icon:"error",
+      title:"please try again",
+      text:"something is wrong"
+    })
+   }
+}
+</script>
 
 <%- include("partials/footer") %>
