--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -28,7 +28,7 @@
               <% }) %>
             </ul>
   
-            <h6>Total Price: <%= order.totalAmount %></h6>
+            <h6>Total Price: <%= order.grandTotal %></h6>
             <p><strong>Status:</strong> <%= order.status %></p>
             
             <!-- Payment Status -->
