--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -129,6 +129,13 @@
               </a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/offers">
+                <i class="fas fa-box"></i>
+               Offers
+              </a>
+            </li class=nav-item>
+
 
           </ul>
         </div>
