--- a/views/users/partials/profileSidebar.ejs
+++ b/views/users/partials/profileSidebar.ejs
@@ -15,6 +15,12 @@
           <i class="bi bi-geo-alt"></i> Address
         </a>
       </li>
+
+      <li>
+        <a href="/users/wallet" class="sidebar-link">
+          <i class="bi bi-bag-check"></i> Wallet
+        </a>
+      </li>
     </ul>
   </div>
   
