--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -124,7 +124,7 @@
             </li class=nav-item>
             <li class="nav-link">
               <a href="/admin/coupons" class="nav-link">
-                <i class="fas"></i>
+                <i class="fas fa-tags"></i>
                 coupons
               </a>
             </li>
